# rp2daq

./: CMakeLists.txt  DEVELOPERS.md  ELECTRICAL.md  LICENSE  PYTHON_REFERENCE.md  README.md  TODO.md  app_spectrometer_using_TCD1304.py  c_code_parser.py  example_ADC_async.py  example_ADC_sync_plot.py  example_gpio_on_change.py  example_gpio_seq.py  example_pin_on_change.py  example_pwm.py  example_stepper.py  example_steppers_XY_movement.py  example_steppers_groupedXY.py  future_code_for_DAC_TDA1543.c.part  hello_world.py  rp2daq.c  rp2daq.h  rp2daq.ino  rp2daq.ino.uf2  rp2daq.py  usb_backend_process.py
devel_zone/: future_code_for_stm.c.part  io_test.py  test_rp2daq.py  wform_retrieval.py
disused_source/: rp2daq_2thread.py  rp2daq_3thread.py  rp2daq_3thread_new.py
docs/: DEVELOPERS.md  ELECTRICAL.md  PYTHON_REFERENCE.md  TODO.md
future/: stepper.c
include/: adc_builtin.c  adc_internal.c  gpio.c  identify.c  pin_out.c  pwm.c  stepper.c  stepper.h
